objects/AP_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Baseline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this policy contains an application that is required for other applications to be provisioned, like Active Directory</inlineHelpText>
        <label>Baseline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>This entitlement rule applies to any of the selected business units, in conjunction with the job classifications.</description>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>FGI</fullName>
                </value>
                <value>
                    <fullName>Purina</fullName>
                </value>
                <value>
                    <fullName>WinField</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Classification__c</fullName>
        <description>This entitlement rule applies these job classifications</description>
        <label>Job Function</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ag Member</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Broker - Foodservice</fullName>
                </value>
                <value>
                    <fullName>Broker - Retail</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Dairy Consultant</fullName>
                </value>
                <value>
                    <fullName>Dairy Member</fullName>
                </value>
                <value>
                    <fullName>Dairy Member Owner</fullName>
                </value>
                <value>
                    <fullName>Direct Ag Producer</fullName>
                </value>
                <value>
                    <fullName>Farmer</fullName>
                </value>
                <value>
                    <fullName>Member of a Member</fullName>
                </value>
                <value>
                    <fullName>Member Owner</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Retailer Management</fullName>
                </value>
                <value>
                    <fullName>Retailer Operations</fullName>
                </value>
                <value>
                    <fullName>Retailer Sales</fullName>
                </value>
                <value>
                    <fullName>Momentum Consultant</fullName>
                </value>
                <value>
                    <fullName>Nutritionist</fullName>
                </value>
                <value>
                    <fullName>Warehousing Partner</fullName>
                </value>
                <value>
                    <fullName>SureTech Customer</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requires_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Validation</label>
        <type>Checkbox</type>
    </fields>
    <label>Access Policy Rule</label>
    <listViews>
        <fullName>Corporate</fullName>
        <columns>NAME</columns>
        <columns>Notes__c</columns>
        <columns>Active__c</columns>
        <columns>Job_Classification__c</columns>
        <columns>Requires_Validation__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Baseline__c</columns>
        <filterScope>Everything</filterScope>
        <label>Corporate</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Policy Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>